--- a/apps/AdminComposite/packages.config
+++ b/apps/AdminComposite/packages.config
@@ -12,5 +12,6 @@
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="log4net" version="1.2.10" />
   <package id="Modernizr" version="2.0.6" />
+  <package id="NConfig" version="1.0.6" />
   <package id="NHibernate" version="3.2.0.4000" />
 </packages>
