--- a/src/sdk/AgentConsole/Config/djlancerock.custom.config
+++ b/src/sdk/AgentConsole/Config/djlancerock.custom.config
@@ -7,7 +7,7 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
 	</startup>
 	<connectionStrings>
-		<add name="forum-db" connectionString="{custom}" />
+		<add name="forum-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
@@ -68,7 +68,7 @@
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			<connectionString value="{custom}" />
+			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Hosting Fabric')" />
 			<parameter>
 				<parameterName value="@log_date" />
