--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -488,7 +488,7 @@
     <Content Include="Views\Badge\_NewBadge.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Moderation\Moderation.cshtml" />
+    <Content Include="Views\Moderation\Posts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Forum\AuthenticationProviders.cshtml" />
@@ -575,6 +575,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_pagination.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Moderation\Comments.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
