--- a/apps/Storefront/StorefrontAdminComposite/Web.config
+++ b/apps/Storefront/StorefrontAdminComposite/Web.config
@@ -58,15 +58,12 @@
 		<trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
 		<!--<httpModules>
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
-		</httpModules>
-		<httpHandlers>
-			<add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-		</httpHandlers>-->
+		</httpModules>-->
 	</system.web>
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true">
+		<!-- What problems will this cause? <modules runAllManagedModulesForAllRequests="false">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
-		</modules>
+		</modules>-->
 	</system.webServer>
 	<location path="composite">
 		<system.webServer>
